@@ -15,6 +15,9 @@
 * Add - Adds the groups_sanitize_get() function.
 * Add - Adds the groups_sanitize_request() function.
 * Update - Legacy access restrictions phaseout: removed quick-create feature when block editor is used, removed show groups option.
+* Update - Revised input sanitation in remnant legacy code pending phaseout.
+* Dev - Validation hints for WordPress.DB.SlowDBQuery.slow_db_query_meta_query in legacy code.
+* Update - Revised sanitation of the legacy options handling code pending phaseout.
 
 2026-01-05 - version 3.10.0
 * Update - WordPress 6.9 compatible.
